%% Diagrama Entidad-Relación (ERD) generado desde sisesqlhybrid.sql
%% Visualízalo en VS Code o GitHub con soporte Mermaid

erDiagram
	dbo_usuario {
		int idUsuario PK
		int idPersona FK
		int nuevoUsuario
		int Usuario
		int Contraseña
		varchar correo_electronico
		time fecha_de_creacion
		time fecha_de_modificacion
		int status
		date ultimo_login
		int idGrupo FK
	}
	dbo_persona {
		int idPersona PK
		varchar nombre
		varchar apellido_paterno
		varchar apellido_materno
		date fecha_de_nacimiento
		char sexo
		varchar curp
		int idEstado FK
		int idMunicipio FK
	}
	dbo_login_perfil {
		int idPerfil PK
		varchar nombre
		varchar descripcion
	}
	dbo_plantel {
		int idPlantel PK
		int idMunicipio FK
		int idEstado FK
		varchar nombre_plantel
	}
	dbo_carga_academica {
		int idCargaAcademica PK
		int idMateria FK
		int SC
		int AS
		int EGC
		tinyint creditos
		int RC
		varchar Grupo
	}
	dbo_horario {
		int idHorario PK
		varchar dia_semana
		time hora
		varchar aula
		int idGrupo FK
	}
	dbo_carrera {
		int idCarrera PK
		varchar carrera
		tinyint duracion_semestres
		varchar descripcion
		int idPlantel FK
		int Column
	}
	dbo_estado {
		int idEstado PK
		varchar nombre_estado
	}
	dbo_municipio {
		int idMunicipio PK
		int idEstado FK
		varchar nombre_municipio
	}
	dbo_menu_valido {
		int id_menu PK
		varchar nombre
		int tipo
		time fecha_creacion
		time fecha_actualizacion
		varchar acceso
	}
	dbo_materias {
		int idMateria PK
		int idCarrera FK
		varchar nombre_materia
		tinyint semestre
		varchar descripcion
		int creditos
	}
	dbo_auditoria {
		int idAuditoria PK
		int idUsuario FK
		varchar accion
		time fechaAccion
		varchar observaciones
	}
	dbo_docente {
		int idDocente PK
		int idUsuario FK
	}
	dbo_pagos {
		int idPago PK
		int idBeca FK
		int idUsuario FK
		decimal cantidad_a_pagar
		time fecha_de_pago
		varchar estado
	}
	dbo_becas {
		int idBeca PK
	}
	dbo_usuario_perfil {
		int idPerfil_Usuario PK
		int idUsuario FK
		int idPerfil FK
	}
	dbo_alumno {
		int idAlumno PK
		int idUsuario FK
		int idCarrera FK
		varchar matricula
		varchar semestre_actual
	}
	dbo_grupo {
		int idGrupo PK
		int idDocente FK
		int idMateria FK
		varchar preido
		varchar clave_grupo
		int cupo
	}
	dbo_calificaciones {
		int idCalificación PK
		int idInscripción FK
		int valor
		varchar observaciones
	}
	dbo_inscripciones {
		int idInscripción PK
		int idAlumno FK
		int idGrupo FK
	}

	%% Relaciones
	dbo_usuario ||--o{ dbo_persona : "idPersona"
	dbo_usuario ||--o{ dbo_grupo : "idGrupo"
	dbo_persona ||--o{ dbo_estado : "idEstado"
	dbo_persona ||--o{ dbo_municipio : "idMunicipio"
	dbo_municipio ||--o{ dbo_estado : "idEstado"
	dbo_plantel ||--o{ dbo_estado : "idEstado"
	dbo_plantel ||--o{ dbo_municipio : "idMunicipio"
	dbo_carga_academica ||--o{ dbo_materias : "idMateria"
	dbo_materias ||--o{ dbo_carrera : "idCarrera"
	dbo_docente ||--o{ dbo_usuario : "idUsuario"
	dbo_pagos ||--o{ dbo_becas : "idBeca"
	dbo_pagos ||--o{ dbo_usuario : "idUsuario"
	dbo_usuario_perfil ||--o{ dbo_login_perfil : "idPerfil"
	dbo_usuario_perfil ||--o{ dbo_usuario : "idUsuario"
	dbo_alumno ||--o{ dbo_usuario : "idUsuario"
	dbo_alumno ||--o{ dbo_carrera : "idCarrera"
	dbo_carrera ||--o{ dbo_plantel : "idPlantel"
	dbo_grupo ||--o{ dbo_docente : "idDocente"
	dbo_grupo ||--o{ dbo_materias : "idMateria"
	dbo_horario ||--o{ dbo_grupo : "idGrupo"
	dbo_calificaciones ||--o{ dbo_inscripciones : "idInscripción"
	dbo_inscripciones ||--o{ dbo_alumno : "idAlumno"
	dbo_inscripciones ||--o{ dbo_grupo : "idGrupo"
